# redis-gui

./: .eslintrc.js  .gitignore  LICENSE  README.md  editor.worker.js  editor.worker.js.map  package.json
app/: Routes.js  Routes.tsx  app.global.css  app.html  index.tsx
app/actions/: connection.ts  loading.ts  localDB.ts  query.ts
app/components/: Main.css  Main.tsx  index.ts
app/components/code-editor/: CodeEditor.tsx
app/components/connection-close-dialog/: ConnectionCloseDialog.tsx
app/components/connection-dialog/: ConnectionDialog.tsx
app/components/connection-list/: ConnectionList.css  ConnectionList.tsx  ConnectionListItem.tsx  ConnectionListPopover.tsx
app/components/connection-remove-dialog/: ConnectionRemoveDialog.tsx
app/components/editor/: Editor.tsx
app/components/result-viewer/: ResultTable.tsx  ResultViewer.css  ResultViewer.tsx  data.json
app/components/sidebar/: ConnectionList.css  ConnectionList.tsx  Header.css  Header.js  Header.tsx  Sidebar.css  Sidebar.js  Sidebar.tsx
app/containers/: App.tsx  MainPage.js  MainPage.tsx  Root.tsx
app/containers/main-layout/: MainLayout.css  MainLayout.tsx
app/containers/main-screen/: MainScreen.css  MainScreen.tsx  index.tsx
app/reducers/: connection.ts  error.ts  index.ts  loading.ts  localDB.ts  query.ts  queryResult.ts  types.ts
app/store/: configureStore.dev.ts  configureStore.prod.ts  configureStore.ts
app/types/: index.ts
configs/: webpack.config.base.js
native/: Cargo.toml
native/src/: connection.rs  lib.rs  query.rs  serialize.rs
test/e2e/: HomePage.e2e.js  HomePage.e2e.ts
(+6 files in other folders)
